data/derived/sp14/progs/unify/prog4260.ml.out
Characters 54-57:
  in h b),b);;
     ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
